--- a/web/themes/custom/mars/sass/_nav.sass
+++ b/web/themes/custom/mars/sass/_nav.sass
@@ -1,6 +1,7 @@
 .site-navigation
   background-color: $bright_red
   padding-top: 16px
+  margin-bottom: 60px
   nav.nav-site-main
     margin-bottom: 0px !important
     .menu 
@@ -14,6 +15,8 @@
         background-color: $bright_red
         // a.sub-menu
         //   color: $white
+        ul li 
+          background-color: inherit
 
 
 
