--- a/web/themes/custom/sis/templates/node--scientist--full.html.twig
+++ b/web/themes/custom/sis/templates/node--scientist--full.html.twig
@@ -10,9 +10,11 @@
   <div{{ content_attributes }}>
     <div class="scientist-video">
       {{ content.field_video_ref }}
+      {# Eliminate numbering, per Andrea Foster, 3/15/2022
       {% if numbering %}
         <div class="numbering">1</div>
       {% endif %}
+      #}
     </div>
     <div class="main-page-content">
       <div class="intro-text color-match">
