--- a/web/themes/custom/sis/sass/_scientist.sass
+++ b/web/themes/custom/sis/sass/_scientist.sass
@@ -126,17 +126,17 @@
       height: 195px
       margin-right: 30px
       margin-bottom: 50px
-      background-image: url('../images/document-guide-theme-blue.png')
+      background-image: url('../images/document-guide-theme-blue.jpg')
       background-repeat: no-repeat
       background-size: contain
       @media (min-width: 992px)
         width: 150px
       .color-theme-green &
-        background-image: url('../images/document-guide-theme-green.png')
+        background-image: url('../images/document-guide-theme-green.jpg')
       .color-theme-magenta &
-        background-image: url('../images/document-guide-theme-magenta.png')
+        background-image: url('../images/document-guide-theme-magenta.jpg')
       .color-theme-teal &
-        background-image: url('../images/document-guide-theme-teal.png')
+        background-image: url('../images/document-guide-theme-teal.jpg')
     .document-content
       padding-top: 20px
   .field__item:last-of-type
