--- a/web/themes/custom/sis/templates/page.html.twig
+++ b/web/themes/custom/sis/templates/page.html.twig
@@ -56,7 +56,7 @@
 
   <header class="main-page-heading">
     <div class="container">
-      <div class="site-partner-logo"><img src="/{{ directory }}/images/23_GSK_SIS_Website_Logo_v01_White.png" alt="GSK logo"></div>
+      <!-- div class="site-partner-logo"><img src="/{{ directory }}/images/23_GSK_SIS_Website_Logo_v01_White.png" alt="GSK logo"></div-->
       <h1><a href="{{ path('<front>') }}" title="{{ 'Home'|t }}" rel="home">{{ site_name }}</a></h1>
       <div class="site-name-subhead">{{ "in collaboration with The Franklin Institute"|t }}</div>
     </div>
