--- a/web/themes/custom/sis/sass/_scientist.sass
+++ b/web/themes/custom/sis/sass/_scientist.sass
@@ -9,20 +9,28 @@
       box-shadow: 0 5px 10px 10px rgba(0,0,0,.2)
   .theme-magenta
     img:hover
-      -webkit-box-shadow: 0 5px 10px 10px rgba(186,14,130,.5)
-      box-shadow: 0 5px 10px 10px rgba(186,14,130,.5)
+      -webkit-box-shadow: 0 5px 10px 10px rgba(95,38,41,.5)
+      box-shadow: 0 5px 10px 10px rgba(95,38,41,.5)
   .theme-blue
     img:hover
-      -webkit-box-shadow: 0 5px 10px 10px rgba(72,93,170,.5)
-      box-shadow: 0 5px 10px 10px rgba(72,93,170,.5)
+      -webkit-box-shadow: 0 5px 10px 10px rgba(39,63,84,.5)
+      box-shadow: 0 5px 10px 10px rgba(39,63,84,.5)
   .theme-green
     img:hover
-      -webkit-box-shadow: 0 5px 10px 10px rgba(85,164,61,.5)
-      box-shadow: 0 5px 10px 10px rgba(85,164,61,.5)
+      -webkit-box-shadow: 0 5px 10px 10px rgba(34,75,60,.5)
+      box-shadow: 0 5px 10px 10px rgba(34,75,60,.5)
   .theme-teal
     img:hover
       -webkit-box-shadow: 0 5px 10px 10px rgba(0,164,179,.5)
       box-shadow: 0 5px 10px 10px rgba(0,164,179,.5)
+  .theme-yellow
+    img:hover
+      -webkit-box-shadow: 0 5px 10px 10px rgba(95,71,25,.5)
+      box-shadow: 0 5px 10px 10px rgba(95,71,25,.5)
+  .theme-orange
+    img:hover
+      -webkit-box-shadow: 0 5px 10px 10px rgba(95,40,20,.5)
+      box-shadow: 0 5px 10px 10px rgba(95,40,20,.5)
   footer
     max-width: 80%
     margin: 50px auto
