--- a/web/themes/custom/sis/sass/_colors.sass
+++ b/web/themes/custom/sis/sass/_colors.sass
@@ -22,6 +22,9 @@ $theme-orange-light: #fdcfaf
 $orange:  #F36633
 $lightOrange: #EEA32D
 
+// Override old teal with new light blue, per Allison on 4/24/2023
+$teal: $theme-blue-light
+
 
 .color-theme-block
   display: block
