--- a/web/themes/custom/sis/sass/_header.sass
+++ b/web/themes/custom/sis/sass/_header.sass
@@ -2,10 +2,11 @@
   text-align: center
   color: $white
   background-color: $orange
-  background-image: url('../images/bkgd_header.png')
-  background-position: center
-  background-repeat: no-repeat
-  background-size: cover
+  // Remove background pattern, per Allison on 4/24/2023
+  //background-image: url('../images/bkgd_header.png')
+  //background-position: center
+  //background-repeat: no-repeat
+  //background-size: cover
   padding: 40px !important
   .site-partner-logo img
     width: 55px
@@ -26,7 +27,8 @@
 
 .bkgd-pattern-bottom
   background-color: $white
-  background-image: url('../images/bkgd_icons.png')
-  background-position: center bottom
-  background-repeat: no-repeat
-  background-size: contain 
+  // Remove background pattern, per Allison on 4/24/2023
+  //background-image: url('../images/bkgd_icons.png')
+  //background-position: center bottom
+  //background-repeat: no-repeat
+  //background-size: contain 
