--- a/web/themes/custom/sis/sass/_scientist.sass
+++ b/web/themes/custom/sis/sass/_scientist.sass
@@ -145,17 +145,25 @@
         background-image: url('../images/document-guide-theme-magenta.jpg')
       .color-theme-teal &
         background-image: url('../images/document-guide-theme-teal.jpg')
+      .color-theme-yellow &
+        background-image: url('../images/document-guide-theme-yellow.jpg')
+      .color-theme-orange &
+        background-image: url('../images/document-guide-theme-orange.jpg')
     .document-content
       padding-top: 20px
   .field__item:last-of-type
     .document-icon-wrapper
-      background-image: url('../images/document-notebook-theme-blue.png')
+      background-image: url('../images/document-notebook-theme-blue.jpg')
       .color-theme-green &
-        background-image: url('../images/document-notebook-theme-green.png')
+        background-image: url('../images/document-notebook-theme-green.jpg')
       .color-theme-magenta &
-        background-image: url('../images/document-notebook-theme-magenta.png')
+        background-image: url('../images/document-notebook-theme-magenta.jpg')
       .color-theme-teal &
-        background-image: url('../images/document-notebook-theme-teal.png')
+        background-image: url('../images/document-notebook-theme-teal.jpg')
+      .color-theme-yellow &
+        background-image: url('../images/document-notebook-theme-yellow.jpg')
+      .color-theme-orange &
+        background-image: url('../images/document-notebook-theme-orange.jpg')
 
 
 
