--- a/web/themes/custom/sis/templates/page.html.twig
+++ b/web/themes/custom/sis/templates/page.html.twig
@@ -14,39 +14,55 @@
   ]
 %}
 
+<style>
 
-<header id="header" class="header" role="banner">
-  <div id="nav-wrapper" class="clearfix">
-  {% if page.utility_nav %}
-    <nav id="menu-utility" class="clearfix" role="navigation">
-      <div class="container">
-        <a href="https://www.fi.edu" class="logo-large" rel="home" title="{{ 'Return to The Franklin Institute homepage'|t }}" aria-label="{{ 'The Franklin Institute logo'|t }}"><div class="site-name">{{ 'The Franklin Institute'|t }}</div></a>
-        <div class="utility-wrapper">
-          {{ page.utility_nav }}
-        </div>
-      </div>
-    </nav>
-  {% endif %}
+#tfi-footer iframe {
+  height: 100vh;
+}
 
-  {% if page.primary_nav %}
-    <nav id="menu-main" class="clearfix" role="navigation">
-      <div class="container">
-        {{ page.primary_nav }}
-      </div>
-    </nav>
-  {% endif %}
-  </div>
-</header>
+/* Header breakpoints */
+#tfi-header {  
+  height: 74px; 
+}
+@media (min-width: 1150px) {
+  #tfi-header { 
+    height: 122px; 
+  }
+}
+
+/* Footer breakpoints */
+#tfi-footer { 
+  /*background-color: #8e7bef;*/
+  height: 1424.55px; 
+}
+@media (min-width: 401px) {
+  #tfi-footer { 
+    height: 1183.97px; 
+  }
+}
+@media (min-width: 601px) {
+  #tfi-footer { 
+    height: 1014px; 
+  }
+}
+@media (min-width: 901px) {
+  #tfi-footer { 
+    height: 574px; 
+  }
+}
+@media (min-width: 1150px) {
+  #tfi-footer { 
+    height: 610px; 
+  }
+}
+</style>
+
+
+<div id="tfi-header">
+  <iframe frameborder="0" scrolling="no" src="https://fi.edu/en/header" width="100%"></iframe>
+</div>
 
 <div{{ attributes.addClass(classes) }}>
-  <div id="mobile-nav">
-      <a href="https://www.fi.edu" class="logo-small" rel="home" title="{{ 'Return to The Franklin Institute homepage'|t }}" aria-label="{{ 'The Franklin Institute logo'|t }}"><div class="site-name">{{ 'The Franklin Institute'|t }}</div></a>
-    <ul class="nav-control">
-      <li><a href="https://tickets.fi.edu" class="buy-tickets" target="_blank">Buy Tickets</a></li>
-      <!-- HIDE li><a href="/interactive-map" class="map-btn" title="Open Map">Map</a></li-->
-      <li><a href="javascript:;" class="menu-btn" title="Open Menu">Menu</a></li>
-    </ul>
-  </div>
 
   {% if page.alert %}
     <div id="alert-message" class="alert-message alert-header">
@@ -87,13 +103,10 @@
     {{ page.below }}
   </div>
 
-  {% if page.footer %}
-    <footer id="footer">
-      <div class="container">
-        {{ page.footer }}
-      </div>
-    </footer>
-  {% endif %}
-
 </div>
+
+<div id="tfi-footer">
+  <iframe frameborder="0" scrolling="no" src="https://fi.edu/en/footer" width="100%"></iframe>
+</div>
+
 <div id="mediaquery"></div>
